objects/Base_Item_Product__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters.   For any other info.</inlineHelpText>
        <label>Additional Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anchor_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchor Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Block__c</fullName>
        <inlineHelpText>Set at the Base Item level. This field needs to be populated in order for the Quoting Tool to identify where to place the sellable item in Product Configurator. If this field is not populated, sellable item(s) will not show up in Quote output file.</inlineHelpText>
        <label>Building Block</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd-Party IVR Connector</fullName>
                </value>
                <value>
                    <fullName>3rd party Support</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting (Interaction Workspace add-on)</fullName>
                </value>
                <value>
                    <fullName>Basic Care</fullName>
                </value>
                <value>
                    <fullName>Bill Server</fullName>
                </value>
                <value>
                    <fullName>Bundled Reporting</fullName>
                </value>
                <value>
                    <fullName>Business Care</fullName>
                </value>
                <value>
                    <fullName>Business Care Plus</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
                <value>
                    <fullName>Call Progress Detection (Outbound Voice add-on)</fullName>
                </value>
                <value>
                    <fullName>Call Qualification/Parking</fullName>
                </value>
                <value>
                    <fullName>CC Analyzer</fullName>
                </value>
                <value>
                    <fullName>CC Pulse</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Coaching (Speech Analytics add-on)</fullName>
                </value>
                <value>
                    <fullName>Customized Desktop (SDK)</fullName>
                </value>
                <value>
                    <fullName>CX Insights</fullName>
                </value>
                <value>
                    <fullName>Disaster recovery</fullName>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Flex Care</fullName>
                </value>
                <value>
                    <fullName>Framework &amp; Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Framework &amp; Intelligent Routing</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>Genesys Care for Partners</fullName>
                </value>
                <value>
                    <fullName>Genesys Interaction Recording</fullName>
                </value>
                <value>
                    <fullName>Genesys Speech Analytics</fullName>
                </value>
                <value>
                    <fullName>Gplus Adapters (SAP, Siebel, etc)</fullName>
                </value>
                <value>
                    <fullName>GQM Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gore_Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Gore Integration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Information__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters.   For product migration information for the Pricing Guide wiki (or future version).  Describes migration information and path for a Sales audience – should cover migration from any predecessors to any successors.</inlineHelpText>
        <label>Migration Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Category__c</fullName>
        <inlineHelpText>Set at Base Item level and is read only in Sellable Item level. Needs to be populated in order for Quoting Tool to identify where to place the sellable item in Product Configurator and also displayed on Quote output file. Drives price list organization.</inlineHelpText>
        <label>New Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interaction Channels</fullName>
                </value>
                <value>
                    <fullName>Business Edition Premise</fullName>
                </value>
                <value>
                    <fullName>Self-Service</fullName>
                </value>
                <value>
                    <fullName>Routing</fullName>
                </value>
                <value>
                    <fullName>Communications Infrastructure</fullName>
                </value>
                <value>
                    <fullName>User Interface/Desktop</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Enterprise Connections</fullName>
                </value>
                <value>
                    <fullName>Product Environment</fullName>
                </value>
                <value>
                    <fullName>Enterprise IP Telephony</fullName>
                </value>
                <value>
                    <fullName>PS Rapid Deployment Packages</fullName>
                </value>
                <value>
                    <fullName>Genesys Universities</fullName>
                </value>
                <value>
                    <fullName>Genesys Care</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Product Marketing Manager who owns the base item and all sellable items under that base item</inlineHelpText>
        <label>PMM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PMM_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Product Manager who owns the base item and all sellable items under that base item</inlineHelpText>
        <label>PM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Base_Item_s_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Base_Item_Product__c</referenceTo>
        <relationshipLabel>Child Base Items</relationshipLabel>
        <relationshipName>Base_Item_s_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Capabilities__c</fullName>
        <inlineHelpText>Freeform field – [unlimited] characters.   For product feature information for the Product Guide wiki (or future version).   Describes product features and benefits for a Sales audience.</inlineHelpText>
        <label>Product Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <inlineHelpText>Freeform field - [unlimited] characters.  For product description information for the Product Guide wiki (or future version).  Describes product features and benefits for a Sales audience.</inlineHelpText>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Financial__c</fullName>
        <inlineHelpText>Indicates the name of the product. This is populated from the Base Item.</inlineHelpText>
        <label>Product (Financial)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Chat</fullName>
                </value>
                <value>
                    <fullName>3rd Party Email</fullName>
                </value>
                <value>
                    <fullName>3rd Party Fax</fullName>
                </value>
                <value>
                    <fullName>3rd Party SMS</fullName>
                </value>
                <value>
                    <fullName>3rd Party Work Items</fullName>
                </value>
                <value>
                    <fullName>Adapter Microsoft</fullName>
                </value>
                <value>
                    <fullName>Adapter MS CRM</fullName>
                </value>
                <value>
                    <fullName>Adapter Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>Adapter SAP</fullName>
                </value>
                <value>
                    <fullName>Adapter Siebel</fullName>
                </value>
                <value>
                    <fullName>Adapter Web Services</fullName>
                </value>
                <value>
                    <fullName>Advisor Suite</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>Altocloud</fullName>
                </value>
                <value>
                    <fullName>AppFoundry</fullName>
                </value>
                <value>
                    <fullName>AudioCodes</fullName>
                </value>
                <value>
                    <fullName>base7 (OpenIN)</fullName>
                </value>
                <value>
                    <fullName>Bill Server</fullName>
                </value>
                <value>
                    <fullName>Bundled Reporting</fullName>
                </value>
                <value>
                    <fullName>Business Edition - Premise</fullName>
                </value>
                <value>
                    <fullName>Business Workflow</fullName>
                </value>
                <value>
                    <fullName>CallPath</fullName>
                </value>
                <value>
                    <fullName>CCA/CC Pulse</fullName>
                </value>
                <value>
                    <fullName>CCON/ICON</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>CIM - HA</fullName>
                </value>
                <value>
                    <fullName>Contact Navigator</fullName>
                </value>
                <value>
                    <fullName>Content Analyzer</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <inlineHelpText>This is the hierarchical group that products flow into for reporting purposes. Each Solution Category is a distinct group to distinguish the products top-level purpose. This is populated from the Base Item.</inlineHelpText>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Process Automation</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>WFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_Category__c</fullName>
        <label>Taxonomy Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Optimization</fullName>
                </value>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Employee Engagement</fullName>
                </value>
                <value>
                    <fullName>Multimedia Communications</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Analytics</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Journey Management</fullName>
                </value>
                <value>
                    <fullName>Product Taxonomy N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution_Category__c</fullName>
        <label>Taxonomy Solution Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Engagement</fullName>
                </value>
                <value>
                    <fullName>Employee Engagement</fullName>
                </value>
                <value>
                    <fullName>Business Optimization</fullName>
                </value>
                <value>
                    <fullName>Intentionally Left Blank</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Education Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution__c</fullName>
        <label>Taxonomy Solution</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Taxonomy_Solution_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Omnichannel Desktop</fullName>
                </value>
                <value>
                    <fullName>Workload Management</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Intentionally Left Blank</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxonomy_Sub_Category__c</fullName>
        <label>Taxonomy Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Taxonomy_Category__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd Party Fax</fullName>
                </value>
                <value>
                    <fullName>3rd Party Work Items</fullName>
                </value>
                <value>
                    <fullName>Adapter Microsoft</fullName>
                </value>
                <value>
                    <fullName>Adapter Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>Adapter Salesforce</fullName>
                </value>
                <value>
                    <fullName>Adapter SAP</fullName>
                </value>
                <value>
                    <fullName>Adapter Siebel</fullName>
                </value>
                <value>
                    <fullName>Adapter Web Services</fullName>
                </value>
                <value>
                    <fullName>Advisor Suite</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting</fullName>
                </value>
                <value>
                    <fullName>Aspect Adapter</fullName>
                </value>
                <value>
                    <fullName>AudioCodes</fullName>
                </value>
                <value>
                    <fullName>base7 (OpenIN)</fullName>
                </value>
                <value>
                    <fullName>Business Edition - Premise</fullName>
                </value>
                <value>
                    <fullName>Business Workflow</fullName>
                </value>
                <value>
                    <fullName>CallPath</fullName>
                </value>
                <value>
                    <fullName>CCA/CC Pulse</fullName>
                </value>
                <value>
                    <fullName>CCON/ICON</fullName>
                </value>
                <value>
                    <fullName>CIM</fullName>
                </value>
                <value>
                    <fullName>CIM - HA</fullName>
                </value>
                <value>
                    <fullName>Contact Navigator</fullName>
                </value>
                <value>
                    <fullName>Content Analyzer</fullName>
                </value>
                <value>
                    <fullName>Conversation Manager</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>ECS</fullName>
                </value>
                <value>
                    <fullName>ERS</fullName>
                </value>
                <value>
                    <fullName>ERS - HA</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Framework-CTI</fullName>
                </value>
                <value>
                    <fullName>Framework Options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Base Item - Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Item_Name__c</columns>
        <columns>NAME</columns>
        <columns>PM_Owner__c</columns>
        <columns>Anchor_Product__c</columns>
        <columns>Building_Block__c</columns>
        <columns>New_Category__c</columns>
        <columns>Parent_Product__c</columns>
        <columns>Gore_Integration_Id__c</columns>
        <columns>Product_Financial__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>PMM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Base_Item_Search</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>New_Category__c</columns>
        <columns>Building_Block__c</columns>
        <columns>Product_Financial__c</columns>
        <columns>Solution_Category__c</columns>
        <columns>PM_Owner__c</columns>
        <columns>Gore_Integration_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Gore_Integration_Id__c</field>
            <operation>equals</operation>
            <value>1372</value>
        </filters>
        <label>My Base Item Search</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Base Items - Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>